--- a/package.json
+++ b/package.json
@@ -9,42 +9,42 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@fullcalendar/core": "^6.1.15",
-    "@fullcalendar/daygrid": "^6.1.15",
-    "@fullcalendar/interaction": "^6.1.15",
-    "@fullcalendar/list": "^6.1.15",
-    "@fullcalendar/react": "^6.1.15",
-    "@fullcalendar/timegrid": "^6.1.15",
-    "@react-jvectormap/core": "^1.0.4",
-    "@react-jvectormap/world": "^1.1.2",
-    "@tailwindcss/forms": "^0.5.9",
-    "apexcharts": "^4.3.0",
-    "flatpickr": "^4.6.13",
-    "lucide-react": "^0.552.0",
+    "@fullcalendar/core": "6.1.15",
+    "@fullcalendar/daygrid": "6.1.15",
+    "@fullcalendar/interaction": "6.1.15",
+    "@fullcalendar/list": "6.1.15",
+    "@fullcalendar/react": "6.1.15",
+    "@fullcalendar/timegrid": "6.1.15",
+    "@react-jvectormap/core": "1.0.4",
+    "@react-jvectormap/world": "1.1.2",
+    "@tailwindcss/forms": "0.5.9",
+    "apexcharts": "4.3.0",
+    "flatpickr": "4.6.13",
+    "lucide-react": "0.552.0",
     "next": "15.5.7",
-    "react": "^19.0.0",
-    "react-apexcharts": "^1.7.0",
-    "react-dnd": "^16.0.1",
-    "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^19.0.0",
-    "react-dropzone": "^14.3.5",
-    "swiper": "^11.2.0",
-    "tailwind-merge": "^2.6.0"
+    "react": "19.0.0",
+    "react-apexcharts": "1.7.0",
+    "react-dnd": "16.0.1",
+    "react-dnd-html5-backend": "16.0.1",
+    "react-dom": "19.0.0",
+    "react-dropzone": "14.3.5",
+    "swiper": "11.2.0",
+    "tailwind-merge": "2.6.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@svgr/webpack": "^8.1.0",
-    "@tailwindcss/postcss": "^4.1.16",
-    "@types/css-modules": "^1.0.5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@types/react-transition-group": "^4.4.12",
-    "eslint": "^9",
+    "@eslint/eslintrc": "3.2.0",
+    "@svgr/webpack": "8.1.0",
+    "@tailwindcss/postcss": "4.1.16",
+    "@types/css-modules": "1.0.5",
+    "@types/node": "20.17.14",
+    "@types/react": "19.0.6",
+    "@types/react-dom": "19.0.2",
+    "@types/react-transition-group": "4.4.12",
+    "eslint": "9.18.0",
     "eslint-config-next": "15.5.7",
-    "postcss": "^8",
-    "tailwindcss": "^4.1.16",
-    "typescript": "^5"
+    "postcss": "8.5.2",
+    "tailwindcss": "4.1.16",
+    "typescript": "5.7.3"
   },
   "overrides": {
     "@react-jvectormap/core": {
